--- a/src/containers/Header.module.scss
+++ b/src/containers/Header.module.scss
@@ -15,8 +15,28 @@
       justify-content: space-between;
       margin-left: auto;
       .navitem {
-        margin-left: 2em;
-        padding: 2em;
+        a {
+          font-weight: var(--font-bold);
+          position: relative;
+          margin-left: 2em;
+          padding: 2em;
+          &.active:after,
+          &:hover:after {
+            width: 100%;
+          }
+          &:after {
+            content: "";
+            position: absolute;
+            display: inline-block;
+            background: var(--green5);
+            width: 0;
+            height: 5px;
+            border-radius: 16px;
+            bottom: 25px;
+            left: 0;
+            transition: all .3s ease-out 0s;
+          }
+        }
       }
     }
   }
