--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@ font-family: 'Open Sans', sans-serif;
   --gray1: #efefef;
   --gray2: #c9c9c9;
   --gray3: #989898;
+  --font-normal: 1rem;
+  --font-size05: .5rem;
+  --font-size075: .75rem;
+  --font-size15: 1.5rem;
+  --font-size2: 2rem;
+  --font-size3: 3rem;
   --font-light: 300;
   --font-regular: 400;
   --font-bold: 700;
@@ -28,9 +34,14 @@ font-family: 'Open Sans', sans-serif;
   padding: 0;
   box-sizing: border-box;
 }
+html, body { height: 100%; }
+#root {
+  height: 100%;
+  min-height: 100%;
+}
 body {
   margin: 0;
-  /* padding: 0; */
+  padding: 0;
   font-family: 'Open Sans', 'Noto Sans KR', 'Nanum Gothic', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
