--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .container {
   height: auto;
   min-height: 100%;
+  /* margin-top: 100px; */
   padding-bottom: 100px;
-  padding-top: 60px;
-  transform: translateY(-60px);
+  padding-top: 160px;
+  /* transform: translateY(-60px); */
 }
