--- a/src/containers/Footer/Footer.module.scss
+++ b/src/containers/Footer/Footer.module.scss
@@ -9,6 +9,7 @@
   background-color: var(--green7);
   color: var(--white2);
   .copyright {
+    font-family: 'Noto Sans KR';
     cursor: default;
   }
   .link {
