--- a/src/containers/Header/Header.module.scss
+++ b/src/containers/Header/Header.module.scss
@@ -5,7 +5,7 @@
   padding: 0 12em .5em;
   align-items: center;
   position: fixed;
-  // z-index: 1;
+  z-index: 1;
   width: 100%;
   &.blur {
     backdrop-filter: blur(30px);
@@ -31,6 +31,10 @@
           &:hover:after {
             width: 100%;
           }
+          &.active:before { 
+            width: 40px; 
+            visibility: visible;
+          }
           &:after {
             content: "";
             position: absolute;
@@ -43,6 +47,21 @@
             left: 0;
             transition: all .3s ease-out 0s;
           }
+          /* &:before {
+            content: "";
+            position: absolute;
+            display: inline-block;
+            visibility: hidden;
+            background: rgba(0, 133, 67, 0.3);
+            width: 0;
+            height: 15px;
+            border-radius: 16px;
+            left: 36px;
+            top: 37px;
+            -webkit-box-shadow: 0px 0px 28px 13px rgba(0, 133, 67, 0.40);
+              -moz-box-shadow: 0px 0px 28px 13px rgba(0, 133, 67, 0.40);
+              box-shadow: 0px 0px 28px 13px rgba(0, 133, 67, 0.40);
+          } */
         }
       }
     }
