--- a/src/containers/Projects/Projects.module.scss
+++ b/src/containers/Projects/Projects.module.scss
@@ -28,6 +28,9 @@
       p:nth-child(2) {
         margin-bottom: 5px;
       }
+      span { 
+        font-weight: var(--font-bold);
+      }
       li {
         display: flex;
         align-items: center;
@@ -39,15 +42,67 @@
     }
   }
   .projects {
+    & > div {
+      margin-top: 15px;
+      display: flex;
+      flex-wrap: wrap;
+    }
     .wrap {
+      border: 1px rgba(0, 133, 67, 0.2) solid;
+      border-radius: 15px;
+      margin-right: 20px;
+      margin-bottom: 20px;
+      padding: 20px;
+      transition: transform .2s ease-out, box-shadow .2s ease-out;
+      display: flex;
+      flex: 1 0 30%;
+      flex-direction: column;
+      justify-content: center;
+      &:hover {
+        // transform: translateY(-5px);
+        transform: scale(1.03, 1.03);
+        background-color: #fafafa;
+        -webkit-box-shadow: 0px 10px 60px 5px rgba(0, 133, 67, 0.20);
+        -moz-box-shadow: 0px 10px 60px 5px rgba(0, 133, 67, 0.20);
+        box-shadow: 0px 10px 60px 5px rgba(0, 133, 67, 0.20);
+      }
+      & > * {
+        margin-bottom: 10px;
+      }
+      img {
+        width: 100%;
+        min-width: 300px;
+        max-height: 240px;
+        object-fit: cover;
+      }
       .title {
-
+        text-align: center;
       }
       .description {
 
       }
-      .link {
-
+      .linkWrap {
+        display: flex;
+        justify-content: center;
+        .link {
+          align-items: center;
+          width: 100px;
+          height: 40px;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          background-color: var(--green6);
+          color: var(--white1);
+          border-radius: 5px;
+          margin-right: 10px;
+          transition: background .2 ease-in-out;
+          svg {
+            margin-right: 5px;
+          }
+          &:hover {
+            background-color: var(--green1);
+          }
+        }
       }
     }
   }
