Home typewriter 추가

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,7 @@
   padding-top: 160px;
   /* transform: translateY(-60px); */
 }
+.Typewriter span {
+  color: var(--green5);
+  /* font-weight: var(--font-light); */
+}
