--- a/src/containers/Footer/Footer.module.scss
+++ b/src/containers/Footer/Footer.module.scss
@@ -1,3 +1,5 @@
+@import '../../responsive/utils.scss';
+
 .container {
   display: flex;
   justify-content: space-around;
@@ -20,6 +22,12 @@
         cursor: pointer;
         margin-right: 25px;
       }
+    }
+  }
+
+  @include tablet {
+    .copyright {
+      padding:0 2em;
     }
   }
 }
