--- a/src/containers/Header/Header.module.scss
+++ b/src/containers/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import '../../responsive/utils.scss';
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -7,6 +9,9 @@
   position: fixed;
   z-index: 1;
   width: 100%;
+  & > svg { 
+    display: none;
+  }
   &.blur {
     backdrop-filter: blur(30px);
     border-bottom: 1px var(--green7) solid;
@@ -69,6 +74,45 @@
               -moz-box-shadow: 0px 0px 28px 13px rgba(0, 133, 67, 0.40);
               box-shadow: 0px 0px 28px 13px rgba(0, 133, 67, 0.40);
           } */
+        }
+      }
+    }
+  }
+  /* ~ 1023 */
+  @include tablet {
+    position: static;
+    padding: .5em 1em;
+    &>svg {
+      display: inherit;
+      font-size: var(--font-size275);
+      padding: 0.1em;
+      cursor: pointer;
+    }
+    & .navbar {
+      flex-direction: column;
+      justify-content: center;
+      &.open {
+        .navlist {
+          max-height: 100vh;
+        }
+      }
+      & .navlist {
+        max-height: 0;
+        overflow: hidden;
+        flex-direction: column;
+        position: absolute;
+        width: 100%;
+        top: 76px;
+        left: 0;
+        text-align: center;
+        background-color: var(--white1);
+        transition: 0.3s all ease-in-out;
+        & .navitem {
+          line-height: 3em;
+          a {
+            padding: 1em 2em;
+            margin-left: initial;
+          }
         }
       }
     }
