--- a/src/containers/Projects/Projects.module.scss
+++ b/src/containers/Projects/Projects.module.scss
@@ -1,3 +1,5 @@
+@import '../../responsive/utils.scss';
+
 .container {
   height: auto;
   min-height: 100%;
@@ -102,6 +104,51 @@
           &:hover {
             background-color: var(--green1);
           }
+        }
+      }
+    }
+  }
+}
+
+@include tablet {
+  .container {
+    & .careers {
+      & > div {
+        flex-direction: column;
+        border-bottom: 1px var(--green4) solid;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+      }
+      & .company {
+        flex: unset;
+        text-align: initial;
+        border-right: none;
+        font-size: 4.5vw;
+      }
+      & .description {
+        flex: unset;
+        font-size: 4vw;
+        & li {
+          & svg {
+            flex-shrink: 0;
+          }
+        }
+      }
+    }
+    & .projects {
+      & > div {
+        flex-direction: column;
+      }
+      & .wrap {
+        margin-right: 0;
+        &:hover {
+          transform: unset;
+          background-color: inherit;
+          box-shadow: unset;
+        }
+        img {
+          min-width: 60vmin;
+          max-height: 40vh;
         }
       }
     }
