--- a/src/containers/Header/Header.module.scss
+++ b/src/containers/Header/Header.module.scss
@@ -19,7 +19,7 @@
   .logo {
     a {
       display: flex;
-      cursor: default;
+      cursor: pointer;
       img {
         width: 60px;
       }
